<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	app:context=".MainActivity">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/layout_cookie"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:background="@drawable/bgblue"
		android:gravity="center">

		<LinearLayout
			android:id="@+id/cookie_text_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:layout_marginVertical="10dp"
			android:background="@drawable/cookie_text_background"
			android:gravity="center"
			android:orientation="vertical"
			android:padding="20dp"
			app:layout_constraintBottom_toTopOf="@+id/perfect_cookie"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="1"
			app:layout_constraintVertical_chainStyle="packed">

			<LinearLayout
				android:id="@+id/cookies_layout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/cookie_quant"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="0"
					android:textAppearance="@style/TextAppearance.AppCompat.Body2"
					android:textColor="#F2F2F2"
					android:textSize="36sp"
					android:typeface="normal" />

				<TextView
					android:id="@+id/cookie_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="5dp"
					android:text="@string/cookie_text"
					android:textAppearance="@style/TextAppearance.AppCompat.Body2"
					android:textColor="#F2F2F2"
					android:textSize="36sp"
					android:typeface="normal" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/cps_layout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/cps_quant"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="0"
					android:textColor="#F2F2F2"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/cps_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="5dp"
					android:text="@string/cps_text"
					android:textColor="#F2F2F2"
					android:textSize="18sp" />
			</LinearLayout>
		</LinearLayout>

		<ImageView
			android:id="@+id/perfect_cookie"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:adjustViewBounds="true"
			android:background="#0fff"
			android:clickable="true"
			android:contentDescription="@string/perfectcookie"
			android:scaleType="fitCenter"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/perfectcookie" />
	</androidx.constraintlayout.widget.ConstraintLayout>

	<LinearLayout
		android:id="@+id/layout_buildings"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:orientation="vertical"
		android:visibility="gone">

		<ListView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1" />

		<ListView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>

	<LinearLayout
		style="?android:attr/buttonBarStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0"
		android:orientation="horizontal"
		android:weightSum="2">

		<Button
			android:id="@+id/navButtonCookie"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/cookie"
			app:icon="@drawable/cookie_icon" />

		<Button
			android:id="@+id/navButtonBuildings"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/buildings"
			app:icon="@drawable/building" />
	</LinearLayout>
</LinearLayout>